--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.tfstate
 *.tfstate.*
 
+# myself added
+.terraform.lock.hcl
+
 # Crash log files
 crash.log
 crash.*.log
@@ -13,7 +16,7 @@ crash.*.log
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
+#*.tfvars      #comented myself.
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
